Estructura base y nuevo index

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Empreador</title>
-	<link rel="stylesheet" href="css/app.css">
+	<title>Las locuras del emperador</title>
+	<link rel="stylesheet" href="assets/css/app.css">
+	<link rel="stylesheet" href="assets/css/fonts.css">
+
 </head>
 <body>
 	<div class="container">
@@ -12,10 +14,23 @@
 			<p>Nuestra primera página web</p>
 		</div>
 		<div class="content">
-			<img src="assets/images/cuzco.jpg" alt="">
-		</div>
-		<div class="footer">
-			
+			<div class="section1">
+				
+				<img src="assets/images/cuzco.jpg" alt="Locuras del emperador">
+			</div>
+			<div class="section2">
+				<h2>Cuzco</h2>
+				<p>
+					Oh, si... el veneno <br>
+					El veneno para Cuzco...
+				</p>
+			</div>
+			<div class="section3">
+				<h2>Precios</h2>
+				<div>$10.00</div>
+				<div>$21.00</div>
+				<div>$35.00</div>
+			</div>
 		</div>
 	</div>
 </body>
